--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -26,136 +30,4 @@ html, body {
     height: 100vh;
     width: 100vw;
 }
-
-.continer {
-    gap: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    flex-direction: row;
-    height: auto;
-    min-height: 100%;
-}
-
-.side {
-    gap: 20px;
-    justify-content: space-between;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    height: 500px;
-}
-
-.pieces { 
-    background: #e2e8f0;
-    padding: 8px;
-    border-radius: 4px;
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-    border: 1px solid #1f2937;
-}
-
-.pieces div { 
-    background: #e2e8f0;
-    padding: 4px;
-    border-radius: 4px;
-    
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-    border: 1px solid #1f2937;
-}
-
-.score {
-    background: #e2e8f0;
-    padding: 2px;
-    border-radius: 4px;
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-    border: 1px solid #1f2937;
-}
-
-.score p {
-    padding: 4px;
-    font-size: 20px;
-    border: 1px solid #1f2937;
-    text-align: center;
-    border-radius: 4px;
-    width: 100%;
-    background: white;
-}
-
-.score span {
-    padding: 4px;
-    border: 1px solid #1f2937;
-    font-size: 25px;
-    width: 100%;
-    text-align: center;
-    height: 200%;
-    border-radius: 4px;
-    background: white;
-}
-
-.matrix {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(20, 1fr);
-}
-
-.game {
-    background: black;
-    width: 250px;
-    height: 500px;
-}
-
-.text_game {
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-}
-
-.buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 4px;
-}
-
-.buttons .row_2 {
-    display: flex;
-    flex-direction: row;
-    gap: 4px;
-}
-
-.start_game {
-    background-color: #059669;
-    color: #e2e8f0;
-    text-align: center;
-    border: 1px solid #1f2937;
-    font-size: 20px;
-    cursor: pointer;
-    padding: 4px;
-    border-radius: 4px;
-}
-
-.buttons button {
-    background-color: #059669;
-    text-align: center;
-    border: 1px solid #1f2937;
-    font-size: 20px;
-    cursor: pointer;
-    width: 60px;
-    height: 30px;
-    padding: 4px;
-    fill: #e2e8f0;
-    border-radius: 4px;
-}
-
-span {
-    width: 25px;
-    height: 25px;
-}
+ 
